[package]
name = "LiuProject1"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.7.0"
bulletproofs = "5.0.0"
merlin = "3.0.0"
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
subtle = "2.6.1"
rand = "0.8.5"
typenum = "1.18.0"
digest = "0.10.7"
generic-array = "0.14.7"
log = "0.4.27"
env_logger = "0.11.7"
ff = "0.13.1"
rsntp = "4.0.0"
chrono = "0.4.40"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
criterion = "0.5.1"


[[bin]]
name = "LiuProject1"
path = "src/main.rs"
harness = false

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false